project('libh2o', 'c', version : '2.2.3')

version = meson.project_version()

lib_src = ['deps/cloexec/cloexec.c',
'deps/libgkc/gkc.c',
'deps/libyrmcds/close.c',
'deps/libyrmcds/connect.c',
'deps/libyrmcds/recv.c',
'deps/libyrmcds/send.c',
'deps/libyrmcds/send_text.c',
'deps/libyrmcds/socket.c',
'deps/libyrmcds/strerror.c',
'deps/libyrmcds/text_mode.c',
'deps/picohttpparser/picohttpparser.c',
'lib/common/cache.c',
'lib/common/file.c',
'lib/common/filecache.c',
'lib/common/hostinfo.c',
'lib/common/http1client.c',
'lib/common/memcached.c',
'lib/common/memory.c',
'lib/common/multithread.c',
'lib/common/serverutil.c',
'lib/common/socket.c',
'lib/common/socketpool.c',
'lib/common/string.c',
'lib/common/time.c',
'lib/common/timeout.c',
'lib/common/url.c',
'lib/core/config.c',
'lib/core/configurator.c',
'lib/core/context.c',
'lib/core/headers.c',
'lib/core/logconf.c',
'lib/core/proxy.c',
'lib/core/request.c',
'lib/core/token.c',
'lib/core/util.c',
'lib/handler/access_log.c',
'lib/handler/chunked.c',
'lib/handler/compress.c',
'lib/handler/compress/gzip.c',
'lib/handler/errordoc.c',
'lib/handler/expires.c',
'lib/handler/fastcgi.c',
'lib/handler/file.c',
'lib/handler/headers.c',
'lib/handler/mimemap.c',
'lib/handler/proxy.c',
'lib/handler/redirect.c',
'lib/handler/reproxy.c',
'lib/handler/throttle_resp.c',
'lib/handler/status.c',
'lib/handler/headers_util.c',
'lib/handler/status/events.c',
'lib/handler/status/requests.c',
'lib/handler/http2_debug_state.c',
'lib/handler/status/durations.c',
'lib/handler/configurator/access_log.c',
'lib/handler/configurator/compress.c',
'lib/handler/configurator/errordoc.c',
'lib/handler/configurator/expires.c',
'lib/handler/configurator/fastcgi.c',
'lib/handler/configurator/file.c',
'lib/handler/configurator/headers.c',
'lib/handler/configurator/proxy.c',
'lib/handler/configurator/redirect.c',
'lib/handler/configurator/reproxy.c',
'lib/handler/configurator/throttle_resp.c',
'lib/handler/configurator/status.c',
'lib/handler/configurator/http2_debug_state.c',
'lib/handler/configurator/headers_util.c',
'lib/http1.c',
'lib/tunnel.c',
'lib/http2/cache_digests.c',
'lib/http2/casper.c',
'lib/http2/connection.c',
'lib/http2/frame.c',
'lib/http2/hpack.c',
'lib/http2/scheduler.c',
'lib/http2/stream.c',
'lib/http2/http2_debug_state.c']

inc = include_directories(['./include',
                          './deps/cloexec/',
                          './deps/brotli/enc/',
                          './deps/golombset/',
                          './deps/libgkc/',
                          './deps/libyrmcds/',
                          './deps/klib/',
                          './deps/neverbleed/',
                          './deps/picohttpparser/',
                          './deps/picotest/',
                          './deps/yaml/include',
                          './deps/yoml'])

libuv_dep = dependency('libuv', version: '>=1.8.0')
zlib_dep = dependency('zlib')
openssl_dep = dependency('openssl')

lib = library('libh2o', sources: lib_src, version: version,
include_directories: inc,
c_args: ['-Wall', '-Wno-unused-value', '-Wno-unused-function', '-O2'],
dependencies: [libuv_dep, zlib_dep, openssl_dep],
install: true)

libh2o_dep = declare_dependency(include_directories : inc,
  link_with : lib)
